# KyberRelay

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: archive.h  cli.h  compress.h  crypto.h  gui.h  keystore.h  kyber_common.h  transfer.h
relay/: .gitignore  README.md  go.mod  main.go  ratelimit.go
relay/deploy/: Caddyfile  README.md  build-linux.sh  install.sh  kyber-relay.env.example  kyber-relay.service
src/: archive.c  cli.c  compress.c  crypto.c  gui.c  keystore.c  main.c  transfer.c
tests/: transfer_selftest.c
web/: .gitignore  API.md  BILLING.md  CLIENT-SIDE-E2E.md  README.md  TESTPLAN.md  accounts.go  accounts_handlers.go  api_handlers.go  apikeys.go  audit.go  audit_test.go  billing.go  billing_handlers.go  contact.go  crypto.go  go.mod  go.sum  handlers.go  integration_test.go  main.go  plans.go  security.go  session.go  store.go  stream.go  stream_test.go  team_handlers.go  team_test.go  teams.go  totp.go  twofa_handlers.go
web/deploy/: Caddyfile  README.md  build-linux.sh  install.sh  kyber-web.env.example  kyber-web.service  stripe-brand.sh
web/deploy/backup/: README.md  backup.env.example  backup.sh  kyber-web-backup.service  kyber-web-backup.timer  restore.sh
web/static/: app.css  app.js  login.js  pricing.js  register.js
web/templates/: app.html  billing-success.html  contact.html  download.html  gone.html  index.html  landing.html  login.html  pricing.html  register.html
